# data-mapping

./: README.md  pyproject.toml
data_mapping/: __init__.py  dynamic_dict.py
tests/: test_dynamic_dict.py  test_init.py
